--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-router-dom": "^6.15.0",
     "zod": "^3.22.2",
     "react-markdown": "^8.0.7",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "@google-cloud/translate": "^7.2.2",
+    "i18next": "^23.4.6",
+    "react-i18next": "^13.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
