--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
+    "@google-cloud/translate": "^7.2.2",
     "date-fns": "^2.30.0",
+    "i18next": "^23.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
-    "react-router-dom": "^6.15.0",
-    "zod": "^3.22.2",
+    "react-i18next": "^13.2.2",
     "react-markdown": "^8.0.7",
+    "react-router-dom": "^6.15.0",
     "react-syntax-highlighter": "^15.5.0",
-    "@google-cloud/translate": "^7.2.2",
-    "i18next": "^23.4.6",
-    "react-i18next": "^13.2.2"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
